New Code Revisions: String Resources
Made more simple changes to the code and added string resources to
replace the hard coded strings. Total errors is now at 190 down from 300
something, 32 of which are spelling "errors" that should be ignored in
my opinion.